# room-sense-firmware

./: .gitignore  README.md  dump_log.txt  partitions.csv  sdkconfig.defaults
components/rs_ble_scanner/: CMakeLists.txt  rs_ble_scanner.c
components/rs_ble_scanner/include/: rs_ble_scanner.h
components/rs_control/: CMakeLists.txt  Kconfig  rs_control.c
components/rs_control/include/: rs_control.h
components/rs_crash/: CMakeLists.txt  Kconfig  rs_crash.c
components/rs_crash/include/: rs_crash.h
components/rs_ota/: CMakeLists.txt  Kconfig  rs_ota.c
components/rs_ota/include/: rs_ota.h
components/rs_presence/: CMakeLists.txt  rs_presence.c
components/rs_presence/include/: rs_presence.h
components/rs_radar/: CMakeLists.txt  Kconfig  rs_radar.c
components/rs_radar/include/: rs_radar.h
components/rs_telemetry/: CMakeLists.txt  Kconfig  rs_telemetry.c
components/rs_telemetry/include/: rs_telemetry.h
components/rs_temp/: CMakeLists.txt  rs_temp.c
components/rs_temp/include/: rs_temp.h
components/rs_wifi_neighbor/: CMakeLists.txt  rs_wifi_neighbor.c
components/rs_wifi_neighbor/include/: rs_wifi_neighbor.h
main/: CMakeLists.txt  app_main.c
